# youBot_Server

./: .gitignore  README.md
youBot_Client/: CMakeLists.txt
youBot_Client/src/: Client.cpp  Client.hpp  Kinematics.cpp  Kinematics.hpp  Message.cpp  Message.hpp  Watchdog.cpp  Watchdog.hpp  youBot_IDs.hpp  youBot_Reply.cpp  youBot_Reply.hpp  youBot_Request.cpp  youBot_Request.hpp
youBot_Info/: CMakeLists.txt  CMakeLists.txt~
youBot_Info/src/: Speaker.cpp  Speaker.hpp  youBotDisplay.cpp  youBotDisplay.hpp  youBot_Info.cpp
youBot_JoyPad/: CMakeLists.txt  CMakeLists.txt~
youBot_JoyPad/src/: JoyPadController.cpp  JoyPadController.hpp  Joystick.cpp  Joystick.hpp  youBot_JoyPad.cpp
youBot_Monitor/: CMakeLists.txt~
youBot_Monitor/src/: youBot_Monitor.cpp
youBot_PID_Tuner/: CMakeLists.txt
youBot_PID_Tuner/src/: tuner.cpp
youBot_Scripts/: Test.sh  Test.sh~  setup.sh  setup.sh~  start.sh  start.sh~  stop.sh  stop.sh~
youBot_Server/: CMakeLists.txt  CMakeLists.txt~
youBot_Server/src/: AbstractAction.cpp  AbstractAction.hpp  ArmCommander.cpp  ArmCommander.hpp  BaseCommander.cpp  BaseCommander.hpp  ControlManagement.cpp  ControlManagement.hpp  GripperCommander.cpp  GripperCommander.hpp  JointController.cpp  JointController.hpp  LinearVelocity.cpp  LinearVelocity.hpp  Loop_Rates.hpp  MotionCommander.cpp  MotionCommander.hpp  PID.cpp  PID.hpp  PTPMotion.cpp  PTPMotion.hpp  Ramp_Generator.cpp  Ramp_Generator.hpp  SingleJoint.cpp  SingleJoint.hpp  Trajectory.cpp  Trajectory.hpp  youBot_Server.cpp
youBot_UDP/: CMakeLists.txt~
youBot_UDP/src/: MessageParser.cpp  (+2 more)
